# mast-test-task

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: main.py
client/core/: settings.py
client/tests/: conftest.py  test_client.py
gui_app/app/: main.py
gui_app/app/core/: settings.py
gui_app/app/domain/entities/: message_entity.py
gui_app/app/infra/api/: server_api.py
gui_app/app/presentation/models/: message_model.py
gui_app/app/presentation/views/: main_window.py
gui_app/app/tests/: conftest.py  test_main_window.py
server/: main.py  migrate.py
server/api/: records.py  root.py
server/core/: deps.py  settings.py
server/db/: database.py  repositories.py
server/models/: record.py
server/schemas/: record.py
server/services/: record.py
server/tests/: conftest.py  test_records.py
server_app/app/: main.py  migrate.py
server_app/app/core/: exceptions.py  settings.py
server_app/app/db/: base.py
server_app/app/db/models/: message.py
server_app/app/db/repositories/: message_repository.py
server_app/app/domain/entities/: message_entity.py
server_app/app/presentation/: dependencies.py
server_app/app/presentation/api/v1/endpoints/: messages.py  root.py
server_app/app/presentation/schemas/: message_schema.py
server_app/app/service/: message_service.py
server_app/app/tests/: conftest.py  test_server.py
