[project]
name = "mast-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Kotov",email = "nik-kotov-98@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pyside6 (>=6.9.1,<7.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pyinstaller (>=6.14.0,<7.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.0"
httpx = "^0.28.1"
pytest-qt = "^4.4.0"


[tool.poetry.group.linters.dependencies]
black = "^25.1.0"
ruff = "^0.11.13"

